--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -111,7 +111,7 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 	\item[\env{}]
 		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}
 	\item[\tat{}]
-		Tat (transactivator) protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a}. Virus does not replicate efficiently without this transactivation \citep{Dayton1986,}. and appears to regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.
+		Tat (transactivator) protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a,Cullen1986}. Virus does not replicate efficiently without this transactivation \citep{Dayton1986}. and appears to regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.  Tat may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but controversial \citep{Lin2007}.
 		%http://www.sciencemag.org/content/260/5112/1320.abstract6
 	\item[\rev{}]
 		Rev (regulator of expression of virion proteins) trans-activator protein shuttles between the nucleus and cytoplasm \citep{Meyer1994} and causes the export of partially spliced and unspliced viral transcripts \citep{Sodroski1986,Feinberg1986,Knight1987,Malim1988,Gutman1988} from the nucleus through recognition of a structured RNA rev response element \citep{Malim1989,Malim1989a}.
@@ -164,7 +164,9 @@ macrophages? half life 1--4 weeks \citep{Perelson1997}
 \section{HIV splicing}
 	RNA splicing was first observed in adenovirus \citep{Berget1977,Chow1977}. Improved understanding of HIV and other viruses offers medical benefits. Although HAART treatments have greatly improved HIV prognosis, long-term survival of HIV patients remains reduced by at least a decade compared to the general population \citep{Lohse2007}. In addition HAART does not provide a permanent cure \citep{Richman2009} and the long-term costs of treatment runs into hundreds of thousands of dollars over the lifetime of a patient \citep{Hutchinson2006,Schackman2006}.  Induction or alteration of splicing has been suggested as a potential treatment \citep{Fukuhara2006,Mandal2010} and differential splicing appears to be one factor limiting cross species infection and the development of animal models of HIV \citep{Zheng2003}. 
 
-	Driven by a strong selective pressure for genome compactness \citep{Gelinas1986,Herman1987,Shin2000}, HIV and other lentiviruses subvert host cell alternative splicing pathways to allow tight packing of their genetic information. Through weak splice sites and overlapping reading frames (Figure \ref{hivMap}), the virus manages to produce precise quantities of at least nine proteins and polyproteins from its single transcription start site and less than 10 kb genome \citep{Stoltzfus2009}. 
+	Rev balanced with weak 3' splice sites \citep{Kammler2006}.
+
+	Driven by a strong selective pressure for genome compactness \citep{Gelinas1986,Herman1987,Shin2000}, HIV and other lentiviruses subvert host cell alternative splicing pathways to allow tight packing of their genetic information. Through weak splice sites and overlapping reading frames (Figure [[FIGURE HERE]]), the virus manages to produce precise quantities of at least nine proteins and polyproteins from its single transcription start site and less than 10 kb genome \citep{Stoltzfus2009}. 
 
 	As such an integral part of the virus life cycle\citep{Kim1989,Pomerantz1990}, alteration of splicing poses a tempting therapeutic target. Inhibition of cellular splicing factors reduces viral reproduction in many genome-wide siRNA screens \citep{Brass2008,Konig2008,Bushman2009} and several members of the spliceosome interact with viral proteins in affinity pulldowns \citep{Jager2012}. Open reading frames in uncharacterized transcripts appear to produce epitopes useful for vaccine development \citep{Bansal2010}. Potential treatments altering viral splicing through small molecule inhibitors \citep{Fukuhara2006,Bakkour2007} and gene therapy \citep{Asparuhova2007,Mandal2010} have restricted viral replication \emph{in vitro}. However without methods to quantify viral splicing or a thorough quantification of splicing under varying conditions, the development of such treatments remains limited. 
 
@@ -199,6 +201,9 @@ macrophages? half life 1--4 weeks \citep{Perelson1997}
 
 	%
 \section{Host cell interactions}
+HIV may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but controversial \citep{Lin2007}
+TAR-dervied miRNA might change gene expression particularly apoptosis pathway \citep{Klase2009}.
+
 \section{Repetitive elements}
 \section{RNA detection}
 	First HIV antibody test \citep{Safai1984,Sarngadharan1984} First DNA test \citep{Ou1988}
