--- a/thesis/latency/latency.tex
+++ b/thesis/latency/latency.tex
@@ -55,11 +55,11 @@
 	\subsection{Previously published data}
 		We collected integration sites from three previously reported studies (Table \ref{tabLatencySamples}), for a total of four expressed versus silent/inducible pairs of samples. These studies used primary \cdFour{} T cells or Jurkat cells infected with HIV or HIV-derived constructs as cell culture models of latency. Flow cytometry allowed cells expressing viral encoded proteins to be sorted from non-expressing cells. In two of the studies, these non-expressing populations were stimulated to ensure that the provirus could be aroused from latency. Specific differences in protocol between the study sets are summarized below. 
 
-		\emph{\Jurkat{}}. \citet{Lewinski2005} infected Jurkat cells with a VSV-G pseudotyped, GFP-expressing pEV731 HIV construct (LTR-Tat-IRES-GFP) \citep{Jordan2001} at an MOI of 0.1. The cells were sorted into GFP+ and GFP- two to four days after infection. GFP+ cells were sorted again two weeks after infection and cells that were again GFP+ were collected for integration site sequencing. GFP- cells were sorted for GFP negativity twice more then stimulated with TNFalpha. Cells that were GFP+ after stimulation were collected for integration site sequencing. DNA was digested with MseI or a combination of NheI, SpeI and XbaI, ligated to adapters for nested PCR, amplified and sequenced by Sanger capillary electrophoresis. 
-
-		\emph{\Bcl{}}. \citet{Shan2011} transduced \cdFour{} T cells with Bcl-2, costimulated with bound anti-CD3 and soluble anti-CD28 antibodies, interleukin-2 and T cell growth factor and then infected with X4-pseudotyped GFP-expressing NL4-3-$\delta$6-drEGFP construct \citep{Mochizuki1998} at an MOI of less than 0.1. DNA was extracted, digested with PstI and circularized \citep{Han2004}. HIV-human junctions were amplified by reverse PCR and sequenced using Sanger capillary electrophoresis.
-
-		\emph{\Active{} \& \Resting{}}. \citet{Pace2012} spinoculated \cdFour{} T cells with HIV NL4-3 at an MOI of 0.1. After 96 hours, the cells were stained for intracellular Gag CD25, CD69 and HLA-DR and sorted into four subpopulations based on activation state and Gag expression; activated Gag-, activated Gag+, resting Gag- and resting Gag+. The ability of the viruses to reactivate was not tested although previous studies have shown that the majority are likely inducible \citep{Plesa2007}. Genomic DNA was extracted and digested with restriction enzymes MseI and Tsp509 and ligated to adapters. Proviral LTR-host genome junctions were sequenced by 454 pyrosequencing after nested PCR.
+	\begin{description}
+		\item[\Jurkat{}] \citet{Lewinski2005} infected Jurkat cells with a VSV-G pseudotyped, GFP-expressing pEV731 HIV construct (LTR-Tat-IRES-GFP) \citep{Jordan2001} at an MOI of 0.1. The cells were sorted into GFP+ and GFP- two to four days after infection. GFP+ cells were sorted again two weeks after infection and cells that were again GFP+ were collected for integration site sequencing. GFP- cells were sorted for GFP negativity twice more then stimulated with TNF$\alpha$. Cells that were GFP+ after stimulation were collected for integration site sequencing. DNA was digested with MseI or a combination of NheI, SpeI and XbaI, ligated to adapters for nested PCR, amplified and sequenced by Sanger capillary electrophoresis. 
+		\item[\Bcl{}] \citet{Shan2011} transduced \cdFour{} T cells with Bcl-2, costimulated with bound anti-CD3 and soluble anti-CD28 antibodies, interleukin-2 and T cell growth factor and then infected with X4-pseudotyped GFP-expressing NL4-3-$\delta$6-drEGFP construct \citep{Mochizuki1998} at an MOI of less than 0.1. DNA was extracted, digested with PstI and circularized \citep{Han2004}. HIV-human junctions were amplified by reverse PCR and sequenced using Sanger capillary electrophoresis.
+		\item[\Active{} \& \Resting{}] \citet{Pace2012} spinoculated \cdFour{} T cells with HIV NL4-3 at an MOI of 0.1. After 96 hours, the cells were stained for intracellular Gag CD25, CD69 and HLA-DR and sorted into four subpopulations based on activation state and Gag expression; activated Gag-, activated Gag+, resting Gag- and resting Gag+. The ability of the viruses to reactivate was not tested although previous studies have shown that the majority are likely inducible \citep{Plesa2007}. Genomic DNA was extracted and digested with restriction enzymes MseI and Tsp509 and ligated to adapters. Proviral LTR-host genome junctions were sequenced by 454 pyrosequencing after nested PCR.
+	\end{description}
 
 		All datasets were processed using the hiReadsProcessor R package \citep{Malani}. Adaptor trimmed reads were aligned to UCSC freeze hg19 using BLAT \citep{Kent2002}. Genomic alignments were scored and required to start within the first three bases of a read with 98\% identity. Alignments for a given read with a BLAT score less than the maximum score for that read were discarded.  Reads giving rise to multiple best scoring genomic alignments were excluded, while reads with a single best hit were dereplicated and converged if within 5bp of each other. The \Bcl{} sample was sequenced from U3 in the $5'$ HIV LTR while the other samples were sequenced from U5 in the $3'$ LTR. To account for the 5 base duplication of host DNA caused by HIV integration, the chromosomal coordinates of the \Bcl{} sample were adjusted by $\pm 4$ bases. %In all analyses except the alphoid repeat section, only integration sites that mapped to a single unique location in the genome were used. 
 		
@@ -187,8 +187,8 @@
 				\includegraphics[width=0.5\textwidth]{strandBias.pdf} %REMOVE%
 			}{
 				\caption[Strand orientation and latency]{The proportion of provirus integrated in the opposite strand compared to cellular genes in silent/inducible (blue) and expressed (red) samples. Error bars show the 95\% Clopper-Pearson binomial confidence interval.}
+				\label{figOrient}
 			}
-		\label{figOrient}
 	\end{figure}
 
 
