--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -109,7 +109,7 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 				PR (protease)
 		\end{description}
 	\item[\env{}]
-		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}
+		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}. fusion \citep{Lifson1986}
 	\item[\tat{}]
 		Tat (transactivator) protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a,Cullen1986}. Virus does not replicate efficiently without this transactivation \citep{Dayton1986}. and appears to regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.  Tat may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but controversial \citep{Lin2007}.
 		%http://www.sciencemag.org/content/260/5112/1320.abstract6
@@ -128,11 +128,6 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 \end{description}
 
 %http://www.sciencedirect.com/science/article/pii/S0966842X04000253
-
-
-
-
-
 
 
 %pre integration complex \citep{Bowerman1989}. extracts from HIV infected cells able to integrate in cell free system \citep{Ellison1990,Farnet1990} contains integrase and matrix and RT \citep{Farnet1991,Bukrinsky1993} %farnet1991 says int only
@@ -203,6 +198,8 @@ macrophages? half life 1--4 weeks \citep{Perelson1997}
 \section{Host cell interactions}
 HIV may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but controversial \citep{Lin2007}
 TAR-dervied miRNA might change gene expression particularly apoptosis pathway \citep{Klase2009}.
+
+change splicing factors \citep{Zhu2002,Dowling2008}
 
 \section{Repetitive elements}
 \section{RNA detection}
